src/logs/error/2025-02-14.log
2025-02-14 21:33:12 error: uncaughtException: _1.numberValidator.min(...).decimal is not a function
TypeError: _1.numberValidator.min(...).decimal is not a function
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\validators.ts\margin.ts:13:34)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\routes\margin.ts:5:1)
2025-02-14 21:34:01 error: uncaughtException: _1.numberValidator.min(...).decimal is not a function
TypeError: _1.numberValidator.min(...).decimal is not a function
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\validators.ts\margin.ts:13:34)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\routes\margin.ts:5:1)
2025-02-14 21:34:45 error: [POST] /api/margin/repay >> StatusCode:: 422, Message:: Invalid type for keys: body.symbols: Expected array, received string - body.balance: Required number - body.weekPeriod: Required number
2025-02-14 21:35:05 error: MarginServiceFile.getSymbol =>  Cannot read properties of undefined (reading 'toLocaleLowerCase')
2025-02-14 21:35:05 error: [POST] /api/margin/repay >> StatusCode:: 605, Message:: La ou les cryptos suivantes ne sont pas reconnues => undefined
2025-02-14 21:35:21 error: MarginServiceFile.repaySymbol =>  Request failed with status code 400
2025-02-14 21:35:59 error: MarginServiceFile.repaySymbol =>  Request failed with status code 400
2025-02-14 21:36:52 error: MarginServiceFile.repaySymbol =>  Request failed with status code 400
2025-02-14 21:47:12 error: uncaughtException: Unexpected token ';'
C:\Users\alexa\CodeVStudio\investiX\src\controllers\margin.ts:51
                    throw ;
                          ^

SyntaxError: Unexpected token ';'
    at wrapSafe (node:internal/modules/cjs/loader:1281:20)
    at Module._compile (node:internal/modules/cjs/loader:1321:27)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\routes\margin.ts:2:1)
2025-02-14 23:09:51 error: uncaughtException: тип Unable to compile TypeScript:
[96msrc/controllers/account.ts[0m:[93m48[0m:[93m5[0m - [91merror[0m[90m TS1005: [0m',' expected.

[7m48[0m     res,
[7m  [0m [91m    ~~~[0m

TSError: тип Unable to compile TypeScript:
[96msrc/controllers/account.ts[0m:[93m48[0m:[93m5[0m - [91merror[0m[90m TS1005: [0m',' expected.

[7m48[0m     res,
[7m  [0m [91m    ~~~[0m

    at createTSError (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:863:19)
    at C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1379:34
    at Object.compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1458:13)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1208:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1024:12)
    at Module.require (node:internal/modules/cjs/loader:1233:19)
2025-02-14 23:11:42 error: uncaughtException: registerSchema is not defined
ReferenceError: registerSchema is not defined
    at AccountRouter.initializeRoutes (C:\Users\alexa\CodeVStudio\investiX\src\routes\account.ts:26:60)
    at new AccountRouter (C:\Users\alexa\CodeVStudio\investiX\src\routes\account.ts:21:10)
    at App.initializeRoutes (C:\Users\alexa\CodeVStudio\investiX\src\routes\index.ts:17:33)
    at App.initializeAppRoutes (C:\Users\alexa\CodeVStudio\investiX\src\server\config.ts:103:11)
    at App.initialize (C:\Users\alexa\CodeVStudio\investiX\src\server\config.ts:45:10)
    at start (C:\Users\alexa\CodeVStudio\investiX\src\server\index.ts:4:13)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\server\index.ts:7:1)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
2025-02-14 23:12:27 error: uncaughtException: registerSchema is not defined
ReferenceError: registerSchema is not defined
    at AccountRouter.initializeRoutes (C:\Users\alexa\CodeVStudio\investiX\src\routes\account.ts:26:60)
    at new AccountRouter (C:\Users\alexa\CodeVStudio\investiX\src\routes\account.ts:21:10)
    at App.initializeRoutes (C:\Users\alexa\CodeVStudio\investiX\src\routes\index.ts:17:33)
    at App.initializeAppRoutes (C:\Users\alexa\CodeVStudio\investiX\src\server\config.ts:103:11)
    at App.initialize (C:\Users\alexa\CodeVStudio\investiX\src\server\config.ts:45:10)
    at start (C:\Users\alexa\CodeVStudio\investiX\src\server\index.ts:4:13)
    at Object.<anonymous> (C:\Users\alexa\CodeVStudio\investiX\src\server\index.ts:7:1)
    at Module._compile (node:internal/modules/cjs/loader:1358:14)
    at Module.m._compile (C:\Users\alexa\CodeVStudio\investiX\node_modules\ts-node\src\index.ts:1618:23)
    at Module._extensions..js (node:internal/modules/cjs/loader:1416:10)
